kubernetes/clusters/homelab/apps/navidrome/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  namespace: navidrome
  labels:
    app.kubernetes.io/name: navidrome
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: navidrome
  template:
    metadata:
      labels:
        app.kubernetes.io/name: navidrome
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-prod-cp-1
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: navidrome
          image: deluan/navidrome:0.64.2@sha256:38dc2727bfcfd5ede290f8ada114fc90368146f265ae4701ddddbcbe2a44ee52
          imagePullPolicy: IfNotPresent
          securityContext:
            readOnlyRootFilesystem: true
          ports:
            - name: http
              containerPort: 4533
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: config-volume
              mountPath: /config
            - name: music-nfs
              subPath: music
              mountPath: /music
              readOnly: true
            - name: lyrics-nfs
              mountPath: /music/_lyrics
              readOnly: false
            - name: navidrome-pvc
              mountPath: /data
            - name: tmp-dir
              mountPath: /tmp
      volumes:
        - name: config-volume
          configMap:
            name: navidrome-config
        - name: music-nfs
          nfs:
            server: 192.168.20.12
            path: /mnt/ssd1/media
        - name: lyrics-nfs
          nfs:
            server: 192.168.20.12
            path: /mnt/ssd1/media/music/_lyrics
        - name: navidrome-pvc
          persistentVolumeClaim:
            claimName: navidrome-pvc
        - name: tmp-dir
          emptyDir: {}
