kubernetes/clusters/homelab/apps/navidrome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  namespace: navidrome
  labels:
    app.kubernetes.io/name: navidrome
spec:
  type: ClusterIP
  ports:
    - port: 4533
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: navidrome
