kubernetes/clusters/homelab/apps/navidrome/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome
  namespace: navidrome
spec:
  ingressClassName: infra-traefik
  rules:
    - host: navidrome.lab.hddq.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: navidrome
                port:
                  number: 4533
